--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-test-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-test-ci-pipeline.yml
@@ -24,6 +24,10 @@ jobs:
           " \
       DisplayName: 'Build'
 
+  - bash: tools/ci_build/github/linux/docker/scripts/training/azure_scale_set_vm_mount_test_data.sh -p $(orttrainingtestdata-storage-key) -d mnist
+    displayName: 'Mount test data'
+    condition: succeededOrFailed()
+
     # Entry point for all ORTModule tests
   - script: |
       docker run \
