--- a/tools/ci_build/github/linux/docker/scripts/training/requirements.txt
+++ b/tools/ci_build/github/linux/docker/scripts/training/requirements.txt
@@ -4,9 +4,9 @@
 pandas
 sklearn
 transformers==v2.10.0
-torch==1.8.0.dev20201201+cu101
-torchvision==0.9.0.dev20201201+cu101
-torchtext==0.9.0.dev20201201
+torch
+torchvision
+torchtext
 tensorboard==v2.0.0
 h5py
 wget
