--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-distributed-test-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-distributed-test-ci-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
           -m
       DisplayName: 'Build'
 
-  - bash: tools/ci_build/github/linux/docker/scripts/training/azure_scale_set_vm_mount_test_data.sh -p $(orttrainingtestdata-storage-key) -d mnist
+  - bash: tools/ci_build/github/linux/docker/scripts/training/azure_scale_set_vm_mount_test_data.sh -p $(orttrainingtestdata-storage-key) -d mnist -d bert-data
     displayName: 'Mount test data'
     condition: succeededOrFailed()
 
@@ -38,6 +38,7 @@ jobs:
         --rm \
         --volume $(Build.SourcesDirectory):/onnxruntime_src \
         --volume $(Build.BinariesDirectory):/build \
+        --volume /mnist:/mnist \
         onnxruntime_ortmodule_distributed_tests_image \
           /build/RelWithDebInfo/launch_test.py \
             --cmd_line_with_args "python orttraining_ortmodule_distributed_tests.py" \
