--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-test-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-gpu-ortmodule-test-ci-pipeline.yml
@@ -36,6 +36,7 @@ jobs:
         --rm \
         --volume $(Build.SourcesDirectory):/onnxruntime_src \
         --volume $(Build.BinariesDirectory):/build \
+        --volume /mnist:/mnist \
         onnxruntime_ortmodule_tests_image \
           /build/RelWithDebInfo/launch_test.py \
             --cmd_line_with_args "python orttraining_ortmodule_tests.py" \
